[package]
name = "whirlpools-client"
version = "0.2.0"
description = "Created with Anchor"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]
name = "whirlpools_client"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30"
anchor-spl = "0.30"
spl-token = { version = ">=4.0, <=7.0", features = ["no-entrypoint"] }
solana-program = ">=1.17, <3.0"
thiserror = "2.0"
uint = { version = "0.9", default-features = false }
borsh = "1.5"
bytemuck = { version = "1.21" }

[dev-dependencies]
proptest = "1.0"
serde = "1.0"
serde_json = "1.0"

[dev-dependencies.serde_with]
version = "3.12"
features = ["json"]
